--- a/src/main.less
+++ b/src/main.less
@@ -4,12 +4,13 @@
   margin: 40px auto 0; 
 }
 
-.god,
+.jesus,
 .devil {
-  width: 200px;
+  width: 280px;
   min-height: 100px;
   margin-top: 20px;
 }
+
 
 img {
   height: 200px;
@@ -28,8 +29,9 @@ progress {
 .cast div {
   height: 15px;
   width: 100%;
-  border: 1px solid;
+  border: 1px solid #000;
   border-radius: 3px;
+  background-color: #444;
   animation: cast 1s linear;
 }
 
@@ -63,7 +65,7 @@ progress {
 }
 
 .jesus-pray {
-  animation: pray 1s linear, vibrate 0.1s infinite;
+  animation: pray 1s linear, vibrate 0.2s infinite;
 }
 
 @keyframes pray {
@@ -71,14 +73,20 @@ progress {
   100% { transform: scale(1); }
 }
 
+@keyframes vibrate {
+  50% { padding-left: 10px; }
+  100% { padding: 0px; }
+}
+
 .action {
-  width: 60px;
-  height: 60px;
+  width: 80px;
+  height: 80px;
   border: 1px solid;
-  padding: 10px 0;
+  padding: 20px 0;
   box-sizing: border-box;
   position: relative;
   border-radius: 3px;
+  background-color: #eee;
   cursor: pointer;
 
   p {
@@ -92,7 +100,7 @@ progress {
     top: 0;
     width: 100%;
     height: 100%;
-    line-height: 60px;
+    line-height: 80px;
     text-align: center;
     font-size: 32px;
     background-color: rgba(255, 255, 255, 0.7);
